<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/playlist_sheet_dialog_config"
        android:textAlignment="center"
        android:textColor="@color/gold"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/playlist_sheet_dialog_delete"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_delete" />

    <TextView
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/playlist_sheet_dialog_edit"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_edit" />

    <TextView
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/playlist_sheet_dialog_share"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_share" />

</LinearLayout>